# red-team-saas

./: .gitignore  CREDENCIALES.md  DATABASE_SCHEMA.md  LICENSE  QUICK_START.md  README.md  README_QA_SCRIPTS.md  SYSTEM_STATUS.md  docker-compose.monitoring.yml  docker-compose.yml  run_all_tests.sh  run_fase_2.ps1  setup_final.ps1  test_api.sh  test_flower.sh  test_health_check.sh  test_prometheus.sh  test_swagger.sh
backend/: .env.example  DATABASE_SCHEMA.md  Dockerfile  Makefile  alembic.ini  docker-compose.staging.yml  docker-compose.yml  pyproject.toml  requirements-test.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_phase4_execution_fields.py  0003_phase5_findings.py  0004_phase6_reports.py  0005_add_user_ai_configs.py
backend/app/: database.py  logging_config.py  main.py
backend/app/api/: deps.py
backend/app/cli/: analytics_commands.py  integration_commands.py
backend/app/core/: audit.py  config.py  constants.py  executor_types.py  findings_processor.py  (+7 more)
backend/cli/: client.py  config.py  main.py  output.py
backend/docs/: API_VERSIONING.md  AUTHENTICATION.md  DEPLOYMENT.md  RATE_LIMITS.md
backend/examples/: python_sdk_example.py  typescript_sdk_example.ts
backend/k8s/: backend-deployment.yaml  configmap.yaml  hpa.yaml  ingress.yaml  namespace.yaml  postgres-deployment.yaml  redis-deployment.yaml  secrets.yaml  serviceaccount.yaml
backend/scripts/: setup_gophish.py
backend/templates/: compliance_report.html  executive_summary.html  technical_report.html
backend/tests/: conftest.py
(+356 files in other folders)
