[tool.poetry]
name = "red-team-saas"
version = "0.1.0"
description = "Red Team Security Audit SaaS Platform"
authors = ["Red Team Dev <dev@redteam.local>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {version = "^0.24.0", extras = ["standard"]}
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
redis = "^5.0.1"
celery = "^5.3.4"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
PyJWT = "^2.8.1"
bcrypt = "^4.1.1"
python-dotenv = "^1.0.0"
cryptography = "^41.0.7"
alembic = "^1.12.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
httpx = "^0.25.2"
pytest-asyncio = "^0.21.1"
black = "^23.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"

[tool.poetry.extras]
cli = ["typer", "rich", "httpx"]

[tool.poetry.scripts]
redteam = "cli.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
